--- a/templates/accounts/profile_detail.html
+++ b/templates/accounts/profile_detail.html
@@ -7,16 +7,16 @@
     <div class="row gx-lg-5">
         <div class="col-lg-4 mb-4 mb-lg-0">
             <div class="profile-info-card text-center">
-                <img src="{% if user.profile.avatar and user.profile.avatar.url %}{{ user.profile.avatar.url }}{% else %}{% static 'images/default_avatar.svg' %}{% endif %}" class="avatar-lg mb-3" alt="{{ user.username }}'s profile image">
-                <h4 class="profile-name">{{ user.username }}</h4>
+                <img src="{% if profile_user.profile.avatar and user.profile.avatar.url %}{{ profile_user.profile.avatar.url }}{% else %}{% static 'images/default_avatar.svg' %}{% endif %}" class="avatar-lg mb-3" alt="{{ user.username }}'s profile image">
+                <h4 class="profile-name">{{ profile_user.get_full_name}}</h4>
                 <p class="text-muted small mb-1">
-                    {% if user.profile.phone %}{{ user.profile.phone }}{% else %}No phone provided{% endif %}
+                    {% if profile_user.profile.phone %}{{ profile_user.profile.phone }}{% else %}No phone provided{% endif %}
                 </p>
-                <p class="profile-bio">{{ user.profile.bio|default:"No bio yet."|linebreaksbr }}</p>
+                <p class="profile-bio">{{ profile_user.profile.bio|default:"No bio yet."|linebreaksbr }}</p>
             </div>
         </div>
         <div class="col-lg-8">
-            <h3>Listings by {{ user.username }}</h3>
+            <h3>Listings by {{profile_user.get_full_name }}</h3>
             <hr>
             {% if user_listings %}
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-4">
