--- a/templates/accounts/profile_detail.html
+++ b/templates/accounts/profile_detail.html
@@ -7,7 +7,7 @@
     <div class="row gx-lg-5">
         <div class="col-lg-4 mb-4 mb-lg-0">
             <div class="profile-info-card text-center">
-                <img src="{% if profile_user.profile.avatar and user.profile.avatar.url %}{{ profile_user.profile.avatar.url }}{% else %}{% static 'images/default_avatar.svg' %}{% endif %}" class="avatar-lg mb-3" alt="{{ user.username }}'s profile image">
+                <img src="{% if profile_user.profile.avatar %}{{ profile_user.profile.avatar.url }}{% else %}{% static 'images/default_avatar.svg' %}{% endif %}" class="avatar-lg mb-3" alt="{{ user.username }}'s profile image">
                 <h4 class="profile-name">{{ profile_user.get_full_name}}</h4>
                 <p class="text-muted small mb-1">
                     {% if profile_user.profile.phone %}{{ profile_user.profile.phone }}{% else %}No phone provided{% endif %}
