--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load listings_tags %}
 
-{% block title %}Seller Dashboard{% endblock %}
+{% block title %}Dashboard{% endblock %}
 
 {% block content %}
 <div class="container my-5">
