--- a/templates/listings/listing_list.html
+++ b/templates/listings/listing_list.html
@@ -6,7 +6,6 @@
 <main class="container">
     <div class="row">
         <aside class="col-lg-3">
-            <h2 class="mb-3">Filters</h2>
             <form id="filter-form" class="mb-4 p-3 bg-light rounded" action="{% url 'listings:listing_list' %}" method="get">
                 {% csrf_token %}
                 {% comment %}
@@ -16,12 +15,12 @@
                 {{ filter.form.category|as_crispy_field }}
                 {{ filter.form.city|as_crispy_field }}
 
-                <button type="submit" class="btn btn-primary w-100 mt-3">Apply Filters</button>
+                <button type="submit" class="btn btn-primary w-100 mt-3">Apply</button>
             </form>
         </aside>
 
         <section class="col-lg-9">
-             <h2 class="mb-3">Search Results</h2>
+             <h2 class="mb-3">Find Deals</h2>
             <div id="listings-container" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 {% include 'listings/partials/listings_grid.html' with listings=listings %}
             </div>
