--- a/templates/reports/create_report.html
+++ b/templates/reports/create_report.html
@@ -16,7 +16,7 @@
                         {% csrf_token %}
                         {{ form|crispy }}
                         <div class="d-grid gap-2 mt-4">
-                            <button class="btn btn-danger" type="submit">Submit Report</button>
+                            <button class="btn btn-warning" type="submit">Submit Report</button>
                         </div>
                     </form>
                 </div>
