--- a/templates/accounts/saved_listings.html
+++ b/templates/accounts/saved_listings.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% load listings_tags %}
 
-{% block title %}My Saved Items{% endblock %}
+{% block title %}My Wishlist{% endblock %}
 
 {% block content %}
 <div class="container my-5">
-    <h1 class="mb-4">My Saved Items</h1>
+    <h1 class="mb-4">Wishlist</h1>
 
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
         {% for item in saved_items %}
