--- a/templates/accounts/order_history.html
+++ b/templates/accounts/order_history.html
@@ -31,7 +31,7 @@
                                 <img src="https://via.placeholder.com/70x70?text=No+Image" class="rounded me-3" alt="No Image Available">
                             {% endif %}
                             <div>
-                                <h6 class="my-0">{{ item.listing.title|default:"[Deleted Listing]" }}</h6>
+                                <h6 class="my-0 listing-history-title">{{ item.listing.title|default:"[Deleted Listing]" }}</h6>
                                 <small class="text-muted">Quantity: {{ item.quantity }}</small>
                             </div>
                         </div>
