--- a/templates/listings/listing_detail.html
+++ b/templates/listings/listing_detail.html
@@ -31,7 +31,7 @@
                 {% endif %}
                 <div class="card-body">
                     <div class="d-flex justify-content-between align-items-start">
-                        <h1 class="card-title">{{ listing.title }}</h1>
+                        <h1 class="listing-detail-title">{{ listing.title }}</h1>
                         {% if user.is_authenticated and user != listing.seller %}
                             <button class="btn btn-link save-button p-0" data-url="{% url 'listings_api:toggle_save_listing' pk=listing.pk %}">
                                 <i class="{% if is_saved %}fas fa-heart text-danger{% else %}far fa-heart{% endif %} fa-2x"></i>
@@ -85,7 +85,7 @@
         </div>
 
         <div class="col-lg-4">
-            <div class="card shadow-sm mb-4 position-sticky" style="top: 80px;">
+           <div class="card shadow-sm mb-4">
                 <div class="card-body">
                     <h5 class="card-title border-bottom pb-2 mb-3">About Seller</h5>
                     <div class="text-center mb-3">
@@ -102,7 +102,7 @@
                         {% endif %}
                     </div>
                      {% if user.is_authenticated and user != listing.seller %}
-                        <a href="{% url 'messaging:send_message' recipient_username=listing.seller.username %}" class="btn btn-info w-100">Message Seller</a>
+                        <a href="{% url 'messaging:send_message' recipient_username=listing.seller.username %}" class="outline-btn-dark font-bold bg-warning btn w-100">Message Seller</a>
                      {% endif %}
                 </div>
                 <div class="card-footer bg-transparent border-top-0">
